# camelforth-rp2040-a

./: .gitignore  README.md
17-camelforth-a.d/pico-examples/: CMakeLists.txt
17-camelforth-a.d/pico-examples/camelforth-a/: CMakeLists.txt  camelforth-a.c  dot_s.fs  dump.inc
17-camelforth-a.d/pico-examples/camelforth-a/forth/: forth.h  rp2040_pico.inc  rp2040_pico_getkey_usb.inc
pre-built-uf2.d/: camelforth-a.uf2  camelforth-a.uf2.md5.txt
ta/: TEMPORARY.LOCATION  THIS.ONE.WORKS.WELL
ta/17-camelforth-a.d/pico-examples/camelforth-a/: CMakeLists.txt  camelforth-a.c
ta/17-camelforth-a.d/pico-examples/camelforth-a/forth/: CMakeLists.txt  cut.inc  forth.c  rp2040_pico.h  rp2040_pico.inc
